# aiops-openenv

./: Dockerfile  README.md  api.py  app.py  baseline.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
